Adicionando algumas configurações do EF Core

--- a/src/Pomotasks/Pomotasks.API/appsettings.json
+++ b/src/Pomotasks/Pomotasks.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "PomotasksDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=YourDatabase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
