--- a/src/Pomotasks/Pomotasks.API/Pomotasks.API.csproj
+++ b/src/Pomotasks/Pomotasks.API/Pomotasks.API.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pomotasks.Persistence\Pomotasks.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
