--- a/src/Pomotasks/Pomotasks.Persistence/Pomotasks.Persistence.csproj
+++ b/src/Pomotasks/Pomotasks.Persistence/Pomotasks.Persistence.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Pomotasks.Domain\Pomotasks.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
