Alterando string de conexão no appsettings.json

--- a/src/Pomotasks/Pomotasks.API/appsettings.json
+++ b/src/Pomotasks/Pomotasks.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PomotasksDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=YourDatabase"
+    "PomotasksDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PomotasksDb"
   },
   "Logging": {
     "LogLevel": {
