--- a/src/Pomotasks/Pomotasks.API/appsettings.json
+++ b/src/Pomotasks/Pomotasks.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PomotasksDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PomotasksDb"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PomotasksDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
