--- a/src/Pomotasks/Pomotasks.Persistence/Pomotasks.Persistence.csproj
+++ b/src/Pomotasks/Pomotasks.Persistence/Pomotasks.Persistence.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Pomotasks.Domain\Pomotasks.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
