--- a/src/Pomotasks/Pomotasks.API/Pomotasks.API.csproj
+++ b/src/Pomotasks/Pomotasks.API/Pomotasks.API.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Pomotasks.Persistence\Pomotasks.Persistence.csproj" />
+    <ProjectReference Include="..\Pomotasks.Service\Pomotasks.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
