Primeiras rotas do serviço da entidade ToDo

--- a/src/Pomotasks/Pomotasks.API/appsettings.json
+++ b/src/Pomotasks/Pomotasks.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PomotasksDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PomotasksDbConnection": "Server=(localdb)\\mssqllocaldb;Database=PomotasksDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
