--- a/src/Pomotasks/Pomotasks.Domain/Pomotasks.Domain.csproj
+++ b/src/Pomotasks/Pomotasks.Domain/Pomotasks.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
   </ItemGroup>
 
 </Project>
