--- a/src/Pomotasks/Pomotasks.Service/Pomotasks.Service.csproj
+++ b/src/Pomotasks/Pomotasks.Service/Pomotasks.Service.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.46.0.54807">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pomotasks.Domain\Pomotasks.Domain.csproj" />
     <ProjectReference Include="..\Pomotasks.Persistence\Pomotasks.Persistence.csproj" />
   </ItemGroup>
