--- a/src/Pomotasks/Pomotasks.Tests/Pomotasks.Tests.csproj
+++ b/src/Pomotasks/Pomotasks.Tests/Pomotasks.Tests.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
@@ -17,6 +19,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Pomotasks.Persistence\Pomotasks.Persistence.csproj" />
+    <ProjectReference Include="..\Pomotasks.Service\Pomotasks.Service.csproj" />
   </ItemGroup>
 
 </Project>
